# FinAcumen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: README.md  config.example.toml
data/: README.md
data/sample/: README.md
docs/: ARCHITECTURE.md
finacumen/: __init__.py
finacumen/embeddings/: __init__.py  cache.py  dashscope.py  nv_embed_v2.py
finacumen/fm/: __init__.py  bank.py  collect.py  cross_verify.py  emb_manager.py  memory_audit.py  ocr_preprocess.py  pruning_rules.py  relevance.py  retrieve.py  schema.py  terminate_guard.py  trace_adapter.py
finacumen/ft/: benchmark_dser_race.py  config.py  llm.py  logger.py  paths.py
finacumen/ft/agent/: __init__.py  base.py  finance.py  manus.py  multimodal.py  planning.py  react.py  toolcall.py
finacumen/ft/dataset/: __init__.py  adapters.py
finacumen/ft/dser_compat/: __init__.py  utils.py
finacumen/ft/eval/: __init__.py  bizbench_eval.py  extract.py  finmme_eval.py  finmmr_eval.py  fintmm_eval.py  judge_cache.py  native.py  smart_correct.py
finacumen/ft/flow/: base.py  extraction_state_bridge.py  flow_factory.py  planning.py
finacumen/ft/llm_adapters/: __init__.py  base.py  default.py  glm_flash.py  glm_thinking.py  qwen3_vl.py
finacumen/ft/prompt/: finance.py  multimodal.py  planning.py
finacumen/ft/skill/: __init__.py  finance_extraction.py
scripts/: download_data.py  download_data.sh  fill_memory_bank.py  fill_memory_bank_all.py  run_ablation.py
tests/: conftest.py  pytest.ini  test_finacumen_acceptance.py  test_memory_agent_readonly.py  test_relevance.py
(+19 files in other folders)
